# AlchitryAuFpgaExample

./: LICENSE  README.md
BasicDDR/: README.md  README_ko.md
BasicDDR/constraint/: alchitry.xdc  ddr.ucf
BasicDDR/hdl/: ddr_test.sv  top.sv
FtBasicRead/: README.md  README_ko.md  dist.sh  dist.tcl  init.tcl
FtBasicRead/hdl/: top.sv
FtBasicRead/script/: dist.sh  dist.tcl  init.tcl
FtBasicWrite/: README.md  README_ko.md  dist.sh  dist.tcl  init.sh  init.tcl
FtBasicWrite/hdl/: top.sv
FtBasicWrite/script/: dist.sh  dist.tcl  init.sh  init.tcl
FtClient/: CMakeLists.txt  README.md  README_ko.md
FtClient/ftd3xx/Linux/include/: ftd3xx.h
FtClient/src/: Common.hpp  Ftd3xxException.hpp  Ftd3xxWrapper.cpp  Ftd3xxWrapper.hpp  StatisticsReport.cpp  StatisticsReport.hpp  TestRead.cpp  TestWrite.cpp
FtClientDotNet/: FtClientDotNet.sln  README.md  README_ko.md  build_linux64.sh  build_win64.cmd
FtClientDotNet/Hglee.Device.Ftd3xx/: FT_DEVICE_LIST_INFO_NODE.cs  FT_PIPE_TRANSFER_CONF.cs  FT_TRANSFER_CONF.cs  FtException.cs  FtStatus.cs  FtWrapperUtil.cs  Ftd3xxPipeLinux.cs  Ftd3xxPipeWindows.cs  Ftd3xxWrapperLinux.cs  Ftd3xxWrapperWindows.cs  IFtd3xxPipe.cs  IFtd3xxWrapper.cs  StatisticsReport.cs
FtClientDotNet/McsChartApp/: App.axaml  App.axaml.cs  McsChartApp.csproj  Program.cs  ViewLocator.cs  app.manifest
FtClientDotNet/TestRead/: Program.cs
FtClientDotNet/TestWrite/: Program.cs  TestWrite.csproj
FtFIFOWrite/: README.md  README_ko.md  dist.sh  dist.tcl  init.tcl
FtFIFOWrite/constraint/: alchitry.xdc
FtFIFOWrite/hdl/: ft600_write.sv  reset_conditioner.sv  top.sv
FtFIFOWrite/script/: dist.sh  dist.tcl  init.tcl
FtMcs/: README.md  README_ko.md
UART/: README.md  README_ko.md  dist.sh  dist.tcl  dist2.tcl  dist2_2023_2.tcl  dist_2023_2.sh  dist_vitis.py  dist_vitis.tcl  init.tcl  init_vitis.py  init_vitis.sh  init_vitis.tcl  init_vitis_2023_2.sh
(+84 files in other folders)
